2003-9-22  Bernie Solomon  <bernard@ugsolutions.com>

	* interp.c: use mono_marshal_get_delegate_invoke to get delegate 
	invocation order consistent. Fix THROW_EX, fix ip in overflow 
	exceptions.

Fri Sep 12 10:42:08 CEST 2003 Paolo Molaro <lupus@ximian.com>

	* interp.c, interp.h: patch from Bernie Solomon <bernard@ugsolutions.com>:
	64 bit/opcodes/exception handling fixes.

2003-08-30  Zoltan Varga  <vargaz@freemail.hu>

	* interp.c: Use mono_field_from_token () in the appropriate places.
	This simplifies the code and also fixes #48051.

2003-08-27  Zoltan Varga  <vargaz@freemail.hu>

	* interp.c (main): Fix the order of initialization calls so it maches 
	the order in the JIT.Patch by Bernie Solomon (bernard@ugsolutions.com).
	Also remove the unused ms mutex.
	
	* interp.c: Get rid of metadata_section.
	
2003-08-22  Zoltan Varga  <vargaz@freemail.hu>

	* interp.c (main): Call g_thread_init () to make glib thread-safe. 
	Fixes #47682. Thanks to Laurent Morichetti (l_m@pacbell.net) for 
	reporting this.

2003-08-18  Zoltan Varga  <vargaz@freemail.hu>

	* interp.c: Get rid of duplicate definition of CHECK_MUL_OVERFLOW.
	* interp.h interp.c: Get rid of VAL_VALUETA, use VAL_MP instead. Fix
	the INITOBJ opcode which was the only user of VALUETA.

2003-08-16  Zoltan Varga  <vargaz@freemail.hu>

	* interp.c (ves_exec_method): Implemented mul.ovf correctly for int32
	and int64. Implement the conv.ovf opcodes for all argument types.

2003-08-15  Zoltan Varga  <vargaz@freemail.hu>

	* interp.c (ves_exec_method): Handle non-valuetypes in CEE_STOBJ.
	Fixes #46781.
	(ves_exec_method): Added support for the synchronized flag to the
	interpreter. Also fixed the CALLI opcode, and made exception handling
	work though the managed-unmanaged barrier.

Fri Jul 25 19:06:27 CEST 2003 Paolo Molaro <lupus@ximian.com>

	* interp.c: updates for new instructions.

2003-07-22  Zoltan Varga  <vargaz@freemail.hu>

	* interp.c: Use the new metadata_section lock instead of metadata_lock.